--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -102,7 +102,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
 	\item Nakai, F., Kubo, T., Oka, T., Kobayashi, N., Tanichi, M., Murakami, M., \underline{Hamamura, T.}, Honjo, M., Miyake, Y., Ide, K., Cortese, A.. Pre-event psychiatric states predict trajectories of post-traumatic stress symptoms during the COVID-19 pandemic. \textit{medRxiv}. 2024:2024-01. \url{https://doi.org/10.1101/2024.01.14.23300571}
 	\item \underline{Hamamura, T.}, Kaneko, K., \& Ito, M. (2024, March 29). Association between gaming disorder and internalizing symptoms among children and adolescents: A child-parent dyadic study. \textit{PsyArXiv.} \url{https://doi.org/10.31234/osf.io/72fb3}
-	
+	\item \underline{Hamamura, T.}, Oka, T., Sakai, Y., Tanaka, S. C., Chiba, T., Honjo, M., \& Kobayashi, N. (2024). Decreases in problematic smartphone use among adults in general after the COVID-19 outbreak: A three-year prospective study. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/68gms}
 \end{enumerate}
 	 
 \section{Academic Presentation}
@@ -192,9 +192,11 @@ toshitaka.hamamura@flinders.edu.au
 	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item INQUIRY
+	\item International Journal of Human-Computer Interaction
 	\item International Journal of Mental Health and Addiction
 	\item Journal of Occupational Health
 	\item Psychology Research and Behavior Management 
+	\item Scientific Reports
 \end{itemize}
 
 \section{Award and Fellowship}
