--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,7 +10,7 @@
 %--preamble--%
 \fancyhead{} % clear all header fields
 \pagestyle{fancy} % for header
-\fancyhead[RO,LE]{CV　浜村\ 俊傑　更新日：2024年4月6日}
+\fancyhead[RO,LE]{CV　浜村\ 俊傑　更新日：2024年7月6日}
 \begin{document}
 \begin{center}
 		{\LARGE \textbf{Curriculum Vitae}}\\~\\
@@ -20,20 +20,20 @@
 \section{氏名}
 浜村\ 俊傑（ハマムラ\ トシタカ）
 \section{現所属}
-College of Education, Psychology, \& Social Work,\\
-Flinders University\\
-Sturt Rd, Bedford Park, South Australia 5042\\~\\
+国立研究開発法人 国立精神・神経医療研究センター\\
+認知行動療法センター\\\
+〒187-8551 小平市小川東町4－1－1\\
 \textbf{E-mailアドレス}\\
-toshitaka.hamamura[@]flinders.edu.au\\
+thamamura[@]ncnp.go.jp\\
 hamamura[@]19.alumni.u-tokyo.ac.jp\\
-%thamamura[@]ncnp.go.jp\\
 
 \section{職歴}
 \begin{description}
 	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
 	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　有期契約社員（ポスドク研究員）
 	\item 2020年04月～2023年03月： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
-	\item 2023年04月～現在： 日本学術振興会 海外特別研究員（受入機関／フリンダーズ大学）
+	\item 2023年04月～2024年06月： 日本学術振興会 海外特別研究員（受入機関／フリンダーズ大学）
+	\item 2024年07年～現在：国立研究開発法人 国立精神・神経医療研究センター認知行動療法センター研修指導部　教育開発室長
 \end{description}
 
 \section{その他の職歴・所属歴}
@@ -41,8 +41,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 2019年04月～2020年03月： 国立精神・神経医療研究センター　認知行動療法センター　研究生
 	\item 2022年12月～2023年1月：国立台湾大学心理学部　Visiting Scholar
 	\item 2020年04月～2024年03月： 株式会社KDDI総合研究所　招聘研究員
-	\item 2020年04月～現在： 国立精神・神経医療研究センター　認知行動療法センター　外来研究員
-	\item 2023年04月～現在： フリンダーズ大学　Visiting Scholar
+	\item 2020年04月～2024年06月： 国立精神・神経医療研究センター　認知行動療法センター　外来研究員
+	\item 2023年04月～2024年06月： フリンダーズ大学　Visiting Scholar
 \end{description}
 
 \section{学歴}
@@ -68,7 +68,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 2018年〜2019年： \textbf{相談員（非常勤）}, サポートルーム，経済学研究科，東京大学
 	\item 2019年〜2023年： \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
 	\item 2020年〜2023年： \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
-	\item 2020年〜現在： \textbf{臨床心理士・公認心理師}，個人事業
+	\item 2020年〜2024年： \textbf{臨床心理士・公認心理師}，個人事業
 	\end{description}
 
 \section{担当したことのある科目}
@@ -118,7 +118,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
 	\item \underline{浜村\ 俊傑}（2023）．アルコール依存症に対するデジタル介入の現状\ 精神科治療学　第38巻増刊号．
 	\item Nakai, F., Kubo, T., Oka, T., Kobayashi, N., Tanichi, M., Murakami, M., \underline{Hamamura, T.}, Honjo, M., Miyake, Y., Ide, K., Cortese, A.. Pre-event psychiatric states predict trajectories of post-traumatic stress symptoms during the COVID-19 pandemic. \textit{medRxiv}. 2024:2024-01. \url{https://doi.org/10.1101/2024.01.14.23300571}
-	\item \underline{Hamamura, T.}, Kaneko, K., \& Ito, M. (2024, March 29). Association between gaming disorder and internalizing symptoms among children and adolescents: A child-parent dyadic study. \textit{PsyArXiv.} \url{https://doi.org/10.31234/osf.io/72fb3}
+	\item \underline{Hamamura, T.}, Kaneko, K., \& Ito, M. (2024, March 29). Association between gaming disorder and internalizing symptoms among children and adolescents: A child-parent dyadic study. \textit{PsyArXiv}. \url{https://doi.org/10.31234/osf.io/72fb3}
+	\item \underline{Hamamura, T.}, Oka, T., Sakai, Y., Tanaka, S. C., Chiba, T., Honjo, M., \& Kobayashi, N. (2024). Decreases in problematic smartphone use among adults in general after the COVID-19 outbreak: A three-year prospective study. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/68gms}
 \end{enumerate}
 
 \subsection{国際学会（招待講演あり）}
@@ -210,16 +211,18 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 \end{enumerate}
 
 \section{査読歴}
-	\begin{enumerate}
+	\begin{itemize}
 	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
 	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
+	\item International Journal of Human-Computer Interaction
 	\item International Journal of Mental Health and Addiction
 	\item INQUIRY
 	\item Journal of Occupational Health
 	\item Psychology Research and Behavior Management 
-\end{enumerate}
+	\item Scientific Reports
+\end{itemize}
 \section{賞罰}
 \begin{description}
 	\item 2017年09月： 日本アルコール関連問題学会 第6回小杉好弘記念賞（代表）
