--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -10,7 +10,8 @@
 %----preamble----%
 \fancyhead{} % clear all header fields
 \pagestyle{fancy} % for header
-\fancyhead[RO,LE]{CV,　T. Hamamura}
+\fancyhead[RO,LE]{CV, T. Hamamura}
+
 \begin{document}
 \sloppy
 \title{Curriculum Vitae}
@@ -92,6 +93,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (2023). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}, 1, 1013--1022. \url{https://doi.org/10.1038/s44220-023-00157-2}
 	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
 	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
+	\item Ota, S., Ito, M., Shigeeda, Y., \underline{Hamamura, T.}, Toyota, A., Sugita, S., Yabe, K., Kikuchi, T., Mimura, M. (2024).　Unified Protocol for the Transdiagnostic Cognitive Behavioral Therapy with a Woman with Irritability and Family Relationship Difficulties. \textit{Japanese Journal of Cognitive Therapy}, 17(2), 256--265.
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -189,12 +191,17 @@ toshitaka.hamamura@flinders.edu.au
 \begin{itemize}
 	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
+	\item BMC Psychiatry
+	\item BMC Public Health
 	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item INQUIRY
 	\item International Journal of Human-Computer Interaction
 	\item International Journal of Mental Health and Addiction
+	\item Journal of Behavioral Addictions
+	\item Journal of General and Family Medicin
 	\item Journal of Occupational Health
+	\item PeerJ
 	\item Psychology Research and Behavior Management 
 	\item Scientific Reports
 \end{itemize}
