--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,7 +10,7 @@
 %--preamble--%
 \fancyhead{} % clear all header fields
 \pagestyle{fancy} % for header
-\fancyhead[RO,LE]{CV　浜村\ 俊傑　更新日：2024年7月6日}
+%\fancyhead[RO,LE]{CV　浜村\ 俊傑　更新日：2024年7月6日}
 \begin{document}
 \begin{center}
 		{\LARGE \textbf{Curriculum Vitae}}\\~\\
@@ -105,6 +105,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (2023). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}, 1, 1013--1022. \url{https://doi.org/10.1038/s44220-023-00157-2}
 	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
 	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
+	\item 太田\ 真右・伊藤\ 正哉・重枝\ 裕子・\underline{浜村\ 俊傑}・豊田\ 彩花・杉田\ 創・矢部\ 魁一・菊地\ 俊暁・三村\ 將．（2024）．家族へのイライラを主訴とする女性との診断を越えた認知行動療法のための統一プロトコル：オンラインでの介入の試み．認知療法研究．第17巻2号．256-265．
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -149,7 +150,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item \underline{浜村\ 俊傑}・菅沼\ 慎一郎・上田\ 麻実・下山\ 晴彦（2017）．セルフモニタリングアプリが与える飲酒量・日常ストレスへの効果．第39回日本アルコール関連問題学会，横浜．（ポスター）
 	\item \underline{浜村\ 俊傑}（2018）.アルコール依存傾向を説明する飲酒量と飲酒期待の役割．日本心理学会第82回大会発表論文集，880，仙台.（ポスター）
 	\item \underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫（2019）.インターネット依存傾向タイプは中高生のスマートフォン利用を予測するか？―質問紙とログデータによる検証―．日本心理学会第83回大会発表論文集，茨木.（ポスター）
-	\item 安\ 婷婷・\underline{浜村\ 俊傑}・岸本\ 鵬子・マーンズ，J．（2019）．中国人留学生における学校ストレスと異文化適応ストレスの抑うつと不安への影響：ネガティブ気分制御期待感の調整効果．日本心理学会第83回大会発表論文集，仙台.（ポスター）
+	\item 安\ ティンティン・\underline{浜村\ 俊傑}・岸本\ 鵬子・マーンズ，J．（2019）．中国人留学生における学校ストレスと異文化適応ストレスの抑うつと不安への影響：ネガティブ気分制御期待感の調整効果．日本心理学会第83回大会発表論文集，仙台.（ポスター）
 	\item\underline{浜村\ 俊傑}・本庄\ 勝・黒川\ 雅幸・三島\ 浩路・小西\ 達也・永田\ 雅俊・米山\ 暁夫(2019)．中高生を対象としたスマホ依存介入アプリの効果検証ーログデータを用いた簡易的ランダム化比較試験－．2019年度アルコール・薬物依存関連学会合同学術総会．179，札幌．（口頭）
 	\item 三島\ 浩路・黒川\ 雅幸・永田\ 雅俊・小西\ 達也・\underline{浜村\ 俊傑}・本庄\ 勝・米山\ 暁夫（2020年3月）．日常生活に関する主観的評価と個人特性によるスマートフォン依存傾向の違い　2020年電子情報通信学会総合大会，p41-45，オンライン．　
 	\item \underline{浜村\ 俊傑}・マーンズ，J.（2020）．飲むなら独りか仲間とか？——高齢者の多量飲酒に着目して——．日本心理学会第84回大会，オンライン.（デジタルポスター）
@@ -214,12 +215,17 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\begin{itemize}
 	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
+	\item BMC Psychiatry
+	\item BMC Public Health
 	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
+	\item INQUIRY
 	\item International Journal of Human-Computer Interaction
 	\item International Journal of Mental Health and Addiction
-	\item INQUIRY
+	\item Journal of Behavioral Addictions
+	\item Journal of General and Family Medicin
 	\item Journal of Occupational Health
+	\item PeerJ
 	\item Psychology Research and Behavior Management 
 	\item Scientific Reports
 \end{itemize}
