--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -94,7 +94,8 @@ toshitaka.hamamura@flinders.edu.au
 	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
 	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
 	\item Ota, S., Ito, M., Shigeeda, Y., \underline{Hamamura, T.}, Toyota, A., Sugita, S., Yabe, K., Kikuchi, T., Mimura, M. (2024).　Unified Protocol for the Transdiagnostic Cognitive Behavioral Therapy with a Woman with Irritability and Family Relationship Difficulties. \textit{Japanese Journal of Cognitive Therapy}, 17(2), 256--265.
-\end{enumerate}
+	\item Ono, K., Tokushige, M., Hiratani, N., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Ito, M., \& Takano, A.. (2025). Reliability and Validity of the Japanese Version of the Internet Gaming Disorder Scale for Children (IGDS-C). \textit{Neuropsychopharmacology Reports}. \url{https://doi.org/10.1002/npr2.12518}
+	\item Galanis, C., Leske, M., \underline{Hamamura, T.}, Weber, N., Hing, N., Delfabbro, P. H., \& King, D. L. (in press). Stigma in substance-based and behavioural addictions: A systematic review. \textit{Journal of Behavioral Addictions}. \url{https://doi.org/10.1556/2006.2024.00072}	\end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
 \begin{enumerate}
