--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -106,6 +106,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
 	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
 	\item 太田\ 真右・伊藤\ 正哉・重枝\ 裕子・\underline{浜村\ 俊傑}・豊田\ 彩花・杉田\ 創・矢部\ 魁一・菊地\ 俊暁・三村\ 將．（2024）．家族へのイライラを主訴とする女性との診断を越えた認知行動療法のための統一プロトコル：オンラインでの介入の試み．認知療法研究．第17巻2号．256-265．
+	\item Ono, K., Tokushige, M., Hiratani, N., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Ito, M., \& Takano, A.. (2025). Reliability and Validity of the Japanese Version of the Internet Gaming Disorder Scale for Children (IGDS-C). \textit{Neuropsychopharmacology Reports}. \url{https://doi.org/10.1002/npr2.12518}
+	\item Galanis, C., Leske, M., \underline{Hamamura, T.}, Weber, N., Hing, N., Delfabbro, P. H., \& King, D. L. (in press). Stigma in substance-based and behavioural addictions: A systematic review. \textit{Journal of Behavioral Addictions}. \url{https://doi.org/10.1556/2006.2024.00072}	
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -201,9 +203,15 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
 	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
 	\item 2020年04月〜2023年03月： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
+	\item 2022年11月〜2023年03月： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
 	\item 2021年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
-	\item 2022年11月〜現在： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
-	\item 2023年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者者)　¥11,960,000
+	\item 2023年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者)　¥11,960,000
+	\item 2024年07月〜現在： 国立精神・神経医療研究センター精神・神経疾患研究開発費　題目：認知行動療法と社会機能改善に関する包括的研究　(研究分担者)
+\end{description}
+
+\section{実施した研修}
+\begin{description}
+	\item 2024年12月15日：リカバリーを目指す認知療法研修
 \end{description}
 
 \section{特許}
