--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -106,8 +106,9 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
 	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
 	\item 太田\ 真右・伊藤\ 正哉・重枝\ 裕子・\underline{浜村\ 俊傑}・豊田\ 彩花・杉田\ 創・矢部\ 魁一・菊地\ 俊暁・三村\ 將．（2024）．家族へのイライラを主訴とする女性との診断を越えた認知行動療法のための統一プロトコル：オンラインでの介入の試み．認知療法研究．第17巻2号．256-265．
-	\item Ono, K., Tokushige, M., Hiratani, N., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Ito, M., \& Takano, A.. (2025). Reliability and Validity of the Japanese Version of the Internet Gaming Disorder Scale for Children (IGDS-C). \textit{Neuropsychopharmacology Reports}. \url{https://doi.org/10.1002/npr2.12518}
-	\item Galanis, C., Leske, M., \underline{Hamamura, T.}, Weber, N., Hing, N., Delfabbro, P. H., \& King, D. L. (in press). Stigma in substance-based and behavioural addictions: A systematic review. \textit{Journal of Behavioral Addictions}. \url{https://doi.org/10.1556/2006.2024.00072}	
+	\item Ono, K., Tokushige, M., Hiratani, N., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Ito, M., \& Takano, A.. (2025). Reliability and Validity of the Japanese Version of the Internet Gaming Disorder Scale for Children (IGDS-C). \textit{Neuropsychopharmacology Reports}, 45, e12518. \url{https://doi.org/10.1002/npr2.12518}
+	\item Galanis, C., Leske, M., \underline{Hamamura, T.}, Weber, N., Hing, N., Delfabbro, P. H., \& King, D. L. (in press). Stigma in substance-based and behavioural addictions: A systematic review. \textit{Journal of Behavioral Addictions}. \url{https://doi.org/10.1556/2006.2024.00072}
+	\item \underline{Hamamura, T.}, Oka, T., Honjo, M., Sakai, Y., Tanaka, S. C., Chiba, T., \& Kobayashi, N. (2024). Decreases in smartphone overuse and moderators among adults in general after the COVID-19 outbreak: A three-year prospective study. \textit{Addictive Behaviors}, 167, 108329. \url{https://doi.org/10.1016/j.addbeh.2025.108329}
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -122,7 +123,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item \underline{浜村\ 俊傑}（2023）．アルコール依存症に対するデジタル介入の現状\ 精神科治療学　第38巻増刊号．
 	\item Nakai, F., Kubo, T., Oka, T., Kobayashi, N., Tanichi, M., Murakami, M., \underline{Hamamura, T.}, Honjo, M., Miyake, Y., Ide, K., Cortese, A.. Pre-event psychiatric states predict trajectories of post-traumatic stress symptoms during the COVID-19 pandemic. \textit{medRxiv}. 2024:2024-01. \url{https://doi.org/10.1101/2024.01.14.23300571}
 	\item \underline{Hamamura, T.}, Kaneko, K., \& Ito, M. (2024, March 29). Association between gaming disorder and internalizing symptoms among children and adolescents: A child-parent dyadic study. \textit{PsyArXiv}. \url{https://doi.org/10.31234/osf.io/72fb3}
-	\item \underline{Hamamura, T.}, Oka, T., Sakai, Y., Tanaka, S. C., Chiba, T., Honjo, M., \& Kobayashi, N. (2024). Decreases in problematic smartphone use among adults in general after the COVID-19 outbreak: A three-year prospective study. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/68gms}
+		\item \underline{浜村\ 俊傑}・高田\ みほ・久我\ 弘典．（2025）．認知行動療法とデジタル技術の応用．最新精神医学, 30(2), p. 95--100． 
+	
 \end{enumerate}
 
 \subsection{国際学会（招待講演あり）}
@@ -144,6 +146,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Behavioral Addictions, Incheon, Korea.
 	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023, May 12--14). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
+	\item Hayashi, K., Meguro T., \underline{Hamamura, T.}, Taya, M., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2024). Estimating Smartphone Orientation for Visualizing Behavior Around Sleep Periods in PSU Patients. 2024 IEEE International Conference on E-health Networking, Application \& Services (HealthCom), Nara, Japan, pp. 1-7, \url{https://doi.org/10.1109/HealthCom60970.2024.10880840}
+	\item Furusawa S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M.. (2024). Predicting Device Usage Patterns in Patients with Problematic Smartphone Use Through Individualized Hidden Markov Models. IEEE International Conference on E-health Networking, Application \& Services (HealthCom), Nara, Japan, 2024, pp. 1-7, \url{https://doi.org/10.1109/HealthCom60970.2024.10880754}
 \end{enumerate}
 
 \section{国内学会・シンポジウム等における発表（招待講演なし）}
@@ -174,13 +178,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 小山 陽平・\underline{浜村\ 俊傑}, 目黒 巧巳,\ 多屋\ 優人・本庄\ 勝・小林\ 七彩・治徳\ 大介・内田\ 真人（2024年3月4--8日）．バッテリー残量に着目したスマホ利用習慣分析．電子情報通信学会総合大会，広島．（口頭）
 	\item 林 海斗・\underline{浜村\ 俊傑}, 目黒 巧巳,\ 多屋\ 優人・本庄\ 勝・小林\ 七彩・治徳\ 大介・内田\ 真人（2024年3月4--8日）．K-meansを用いたスマートフォン依存患者の利用姿勢推定 ．電子情報通信学会総合大会，広島．（口頭）
 	\item 金 慧英・\underline{浜村\ 俊傑}, 目黒 巧巳,\ 多屋\ 優人・本庄\ 勝・小林\ 七彩・治徳\ 大介・内田\ 真人（2024年3月4--8日）．Redefining Smartphone Apps Categories Based on Actual Usage．電子情報通信学会総合大会，広島．（口頭）
-\end{enumerate}
-
-\section{学術雑誌等又は商業誌における解説，総説}
-\begin{enumerate}
-	\item \underline{浜村\ 俊傑}（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」\ 精神療法，p.602-603
-	\item \underline{浜村\ 俊傑}（2020）．書評：松本俊彦（著）「物質使用障害の治療」\ 精神療法，p.715
-	\item \underline{浜村\ 俊傑}（2023）．「アルコール依存症に対するデジタル介入の現状」精神科治療学　第38巻増刊号．
+	\item 三田村\ 康衣・井上\ 真里・梅本\ 育恵・伊藤\ 愛・片柳\ 章子・山本\ 洋美・千葉\ 裕之・浜村\ 俊傑・大野\ 裕, 久我\ 弘典．（2024年12月1日）リカバリーを目指す認知療法に関する研修とその効果の予備的検討．第13回日本ポジティブサイコロジー医学会学術集会，慶應義塾大学．
+	
 \end{enumerate}
 
 \section{その他（アウトリーチ活動等）}
@@ -190,6 +189,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-スマートフォンはどのくらいまでなら使っていいのですか？．東進ハイスクール．\url{https://protect-au.mimecast.com/s/QRZtCQnMAlCN8wNRTxjJE_?domain=toshin.com}
 	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-スマホをついいじってしまうのですが、どうすればこの癖を治せますか。．東進ハイスクール．\url{https://protect-au.mimecast.com/s/Tjj0CRON8mfgJ3gOUNYEt8?domain=toshin.com}
 	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-勉強とは関係のないサイトまで見てしまい勉強が進みません。．東進ハイスクール．\url{https://protect-au.mimecast.com/s/HmJHCVARJqSP7pPZFyaaEr?domain=toshin.com}
+	\item 浜村\ 俊傑（2024年11月12日）．こころの問題と現代社会．中央聖書神学校．
 \end{enumerate}
 
 \section{競争的研究費}
@@ -201,12 +201,12 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 2017年10月〜2018年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：モバイル端末でのフィードバックを活用した多量飲酒低減ICT教育プログラムの効果検証　(研究代表者) ¥300,000
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
-	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
+	\item 2020年04月〜2025年03月： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
 	\item 2020年04月〜2023年03月： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
 	\item 2022年11月〜2023年03月： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
-	\item 2021年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
-	\item 2023年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者)　¥11,960,000
+	\item 2021年04月〜2025年03月： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
 	\item 2024年07月〜現在： 国立精神・神経医療研究センター精神・神経疾患研究開発費　題目：認知行動療法と社会機能改善に関する包括的研究　(研究分担者)
+	\item 2025年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者)　¥11,960,000
 \end{description}
 
 \section{実施した研修}
@@ -224,16 +224,19 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
 	\item BMC Psychiatry
+	\item BMC Psychology
 	\item BMC Public Health
 	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item INQUIRY
 	\item International Journal of Human-Computer Interaction
 	\item International Journal of Mental Health and Addiction
+	\item International Journal of Psychology
 	\item Journal of Behavioral Addictions
 	\item Journal of General and Family Medicin
 	\item Journal of Occupational Health
 	\item PeerJ
+	\item Psychology of Popular Media
 	\item Psychology Research and Behavior Management 
 	\item Scientific Reports
 \end{itemize}
